# bids_qc_pkg

./: README.md
src_myqc/: pyproject.toml
src_myqc/src/bids_qc_pkg/struct/: __init__.py  struct_generate_html_reports.py  struct_pipeline_final.py  struct_pipeline_initial.py  struct_report_generator.py
